--- a/public/gadgets/nameResolver.html
+++ b/public/gadgets/nameResolver.html
@@ -191,7 +191,7 @@ var clickGo = function() {
 <div id='content'>
 	<input type="text" id="txtInputText" style="width:15em;"/>
  	<input type="submit" value="Go"/ style="margin: 5px;" onclick="clickGo();"/> 
- 	<div style="display: inline">e.g. "M67" or "190 00 00 -11 37 21.2"</div>
+ 	<div style="display: inline; float: right;">e.g. "M67" or "190 00 00 -11 37 21.2"</div>
  	<div id="divStatusText" style="float: right; margin-top: 1px"></div> 
 </div>
 </body>
