--- a/public/index.html
+++ b/public/index.html
@@ -9,11 +9,7 @@
 <link rel="stylesheet" href="/css/dashboard.css">
 <link rel="stylesheet" href="/css/widgets.css" type="text/css">
 
-<script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
-
-<script src="/gfx/gfx.js" type="text/javascript" charset="utf-8"></script>
-<script src="/gfx/gfx.flip.js" type="text/javascript" charset="utf-8"></script>
-<script src="/gfx/gfx.cube.js" type="text/javascript" charset="utf-8"></script>
+<script type="text/javascript" src="http://code.jquery.com/jquery-2.1.1.min.js"></script>
 
 <script src="/xhr.js" type="text/javascript" charset="utf-8"></script>
 
