Remove remote library dependencies

--- a/public/gadgets/fitsViewer.html
+++ b/public/gadgets/fitsViewer.html
@@ -5,9 +5,9 @@
 <meta http-equiv="Pragma" content="no-cache">
 <title>FITS Viewer</title>
 
-<link rel="stylesheet" href="http://code.jquery.com/ui/1.11.0/themes/smoothness/jquery-ui.css">
-<script type="text/javascript" src="http://code.jquery.com/jquery-2.1.1.js"></script>
-<script type="text/javascript" src="http://code.jquery.com/ui/1.11.0/jquery-ui.js"></script>
+<link rel="stylesheet" href="/jquery-ui-1.11.0.smoothness/jquery-ui.css">
+<script type="text/javascript" src="/jquery-1.11.1.js"></script>
+<script type="text/javascript" src="/jquery-ui-1.11.0.smoothness/jquery-ui.js"></script>
 <link href="/css/fitsViewer.css" rel="stylesheet" type="text/css">
 
 <!-- Libraries for FITS viewer -->
