--- a/public/gadgets/tableView.html
+++ b/public/gadgets/tableView.html
@@ -20,7 +20,7 @@
 <link rel="stylesheet" type="text/css" href="http://yui.yahooapis.com/combo?2.8.1/build/fonts/fonts-min.css&2.8.1/build/grids/grids-min.css&2.8.1/build/base/base-min.css&2.8.1/build/paginator/assets/skins/sam/paginator.css&2.8.1/build/datatable/assets/skins/sam/datatable.css">
 <!-- Combo-handled YUI JS files: -->
 <script src="http://yui.yahooapis.com/combo?2.8.1/build/yahoo/yahoo.js&2.8.1/build/dom/dom.js&2.8.1/build/event/event.js&2.8.1/build/dragdrop/dragdrop.js&2.8.1/build/element/element.js&2.8.1/build/paginator/paginator.js&2.8.1/build/datasource/datasource.js&2.8.1/build/datatable/datatable.js&2.8.1/build/selector/selector.js"></script>
-<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.5.2/jquery.min.js"></script>
+<script src="/jquery-1.11.1.js"></script>
 
 <style type="text/css">
 #divTable { 
