--- a/public/gadgets/ASCIIDataLoader.html
+++ b/public/gadgets/ASCIIDataLoader.html
@@ -10,7 +10,7 @@
 <link href="/css/text.css" rel="stylesheet" type="text/css">
 <link href="/css/widgets.css" rel="stylesheet" type="text/css">  
 
-<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.5.2/jquery.js"></script>
+<script src="/jquery-1.11.1.js"></script>
 <script src="/util.js" type="text/javascript"></script>
 
 <script type="text/javascript">
