--- a/public/gadgets/dataInquirer.html
+++ b/public/gadgets/dataInquirer.html
@@ -35,7 +35,7 @@
 	</div>
 </div>
 </body>
-<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.5.2/jquery.js" type="text/javascript"></script>
+<script src="/jquery-1.11.1.js" type="text/javascript"></script>
 <script src="/util.js" type="text/javascript"></script> 
 
 <script type="text/javascript">
@@ -230,12 +230,12 @@ function setViewPortBounds(newBounds) {
 
 function populateSelect(selectName, options) { 
   var html = '';
-  var currentSelection = $("#" + selectName + " option:selected").text();
   var len = options.length;
   for (var i = 0; i< len; i++) {
     html += '<option value="' + options[i] + '">' + options[i] + '</option>';
   }
   $("#" + selectName).html(html);
+  var currentSelection = $("#" + selectName + " option:selected").text();
   $("#" + selectName + "option[value=" + currentSelection + "]").attr("selected", true);  
 }
 </script>
