--- a/public/gadgets/dataSetSelector.html
+++ b/public/gadgets/dataSetSelector.html
@@ -17,7 +17,7 @@
 	<div id="dataSetList"></div>
 	<input type="submit" value="Copy Visible" onclick="subsetByVisible();">
 </div>
-<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.5.2/jquery.js" type="text/javascript"></script>
+<script src="/jquery-1.11.1.js" type="text/javascript"></script>
 
 <script type="text/javascript">
 // Creates gadget object
