--- a/public/gadgets/histogramView.html
+++ b/public/gadgets/histogramView.html
@@ -26,7 +26,7 @@
 </div>
 </body>
 
-<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.5.2/jquery.js"></script>
+<script src="/jquery-1.11.1.js"></script>
 <script src="/highcharts.src.js" type="text/javascript"></script>
 <script src="/util.js" type="text/javascript"></script>
 
