--- a/public/gadgets/nameResolver.html
+++ b/public/gadgets/nameResolver.html
@@ -7,7 +7,7 @@
 <title>Name Resolver</title>
 <!-- other scripts -->
 <script type="text/javascript" src="http://www.google.com/jsapi"></script>
-<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.5.2/jquery.min.js" type="text/javascript"></script>  
+<script src="/jquery-1.11.1.js" type="text/javascript"></script>  
   
 <!-- Astro scripts -->
 <script src="/util.js" type="text/javascript"></script>
