--- a/public/gadgets/plotView.html
+++ b/public/gadgets/plotView.html
@@ -40,7 +40,7 @@ td{
 </div>
 </body>
 <!-- chart dependencies -->
-<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.6.1/jquery.min.js" type="text/javascript"></script>
+<script src="/jquery-1.11.1.js" type="text/javascript"></script>
 <script src="/util.js" type="text/javascript"></script> 
 <script src="/highcharts.src.js" type="text/javascript"></script>
 <script type="text/javascript">
