--- a/public/gadgets/sciDBCoAdd.html
+++ b/public/gadgets/sciDBCoAdd.html
@@ -62,7 +62,7 @@
         </div>
     </div>
 </body>
-<script src="http://code.jquery.com/jquery-1.8.1.min.js" type="text/javascript"></script>
+<script src="/jquery-1.11.1.js" type="text/javascript"></script>
 <script src="/util.js" type="text/javascript"></script>
 <script type="text/javascript" src="/wcs.js"></script>
 <script type="text/javascript">
