--- a/public/gadgets/skyView.html
+++ b/public/gadgets/skyView.html
@@ -14,7 +14,7 @@
 <body>
 	<div id="content" style="width: 100%; height: 600px"></div>
 </body>
-<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.5.2/jquery.js"></script>
+<script src="/jquery-1.11.1.js"></script>
 <script src="http://google.com/jsapi?key=ABQIAAAAVGHgv2pouycqhAw5tCmtChR1aol8vC9LmxJ_-IIqPo0vb4nybRTh6avLgiFPsdQwzEmpcYDE1DLlcA" type="text/javascript"></script>
 <script> 
    
@@ -176,19 +176,19 @@ function getColorIcon(color){
   var iconUrl;      
   switch(color){
     case "red":
-      iconUrl = "http://ascot.astro.washington.edu/images/targetRed.png";
+      iconUrl = "/images/targetRed.png";
       break;
     case "green":
-      iconUrl = "http://ascot.astro.washington.edu/images/targetGreen.png";
+      iconUrl = "/images/targetGreen.png";
       break;
     case "yellow":
-      iconUrl = "http://ascot.astro.washington.edu/images/targetYellow.png";
+      iconUrl = "/images/targetYellow.png";
       break;
     case "blue":
-      iconUrl = "http://ascot.astro.washington.edu/images/targetBlue.png";
+      iconUrl = "/images/targetBlue.png";
       break;
     default:
-      iconUrl = "http://ascot.astro.washington.edu/images/targetGrey.png";
+      iconUrl = "/images/targetGrey.png";
       break;
   }
   return iconUrl
