--- a/public/gadgets/timeSeries.html
+++ b/public/gadgets/timeSeries.html
@@ -70,7 +70,7 @@
         </div>
     </div>
 </body>
-<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.5.2/jquery.js" type="text/javascript"></script>
+<script src="/jquery-1.11.1.js" type="text/javascript"></script>
 <script src="/util.js" type="text/javascript"></script>
 <script src="/highcharts.src.js" type="text/javascript"></script>
 <script src="/jquery.postmessage.min.js" type="text/javascript"></script>
