--- a/public/gadgets/plotView.html
+++ b/public/gadgets/plotView.html
@@ -175,6 +175,9 @@ function populateSelects() {
         columnNames = selectedDataSet.getColumns();
         selectedXAxis = populateSelect("selectXAxis", columnNames, selectedXAxis).val();
         selectedYAxis = populateSelect("selectYAxis", columnNames, selectedYAxis).val();
+        
+        gadget.setState({ 'selectedXAxis': selectedXAxis });
+        gadget.setState({ 'selectedYAxis': selectedYAxis });
       }
       gadget.setState({ 'selectedDataSetName' : selectedDataSetName });
     }    
