--- a/public/gadgets/densityPlot.html
+++ b/public/gadgets/densityPlot.html
@@ -10,7 +10,7 @@
 <link href="/css/text.css" rel="stylesheet" type="text/css"> 
 <link href="/css/widgets.css" rel="stylesheet" type="text/css"> 
 
-<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.5.2/jquery.js"></script>
+<script src="/jquery-1.11.1.js"></script>
 <script src="/highcharts.src.js" type="text/javascript"></script>
 <script src="/util.js" type="text/javascript"></script>
 
@@ -78,6 +78,20 @@ gadget.init = function(callback){
 
   callback();
 }
+
+gadget.saveState = function() {
+	/*gadget.setState({
+		axisInverted : {
+        x : !axisInverted.x,
+        y : axisInverted.y
+		},
+		'selectedXAxis': selectedXAxis,
+		'selectedYAxis': selectedYAxis,
+		'selectedDataSetName' : selectedDataSetName,
+		'numBinsX': numBinsX,
+		'maxDensity': maxDensity
+	});*/
+};
 
 gadget.loadState = function(state){
   if (state) {
@@ -158,8 +172,6 @@ function populateSelects() {
   columnNames = selectedDataSet.getColumns();
   selectedXAxis = populateSelect("selectXAxis", columnNames, selectedXAxis).val();
   selectedYAxis = populateSelect("selectYAxis", columnNames, selectedYAxis).val();
-  gadget.setState({ 'selectedXAxis': selectedXAxis });
-  gadget.setState({ 'selectedYAxis': selectedYAxis });
 
   // add colors to the select box (pass the select Name and color array)
   $('#selectDatasetName').bind('change', function(){
@@ -756,7 +768,6 @@ function doPlot() {
          <input type="radio" id="radSelectZoom" name="radSelectZoom" value="zoom" /><label for="radZoom">Zoom</label>
    	</div>
 	</form>
-	<input id="btDoPlot" onclick="doPlot();" type="button" value="Plot"/><br>
 	<!-- The scatter plot -->
 	<div id="divChart1" style="width: 100%; height: 400px; margin: 0 auto"></div>
 </div>
