--- a/public/gadgets/plotView.html
+++ b/public/gadgets/plotView.html
@@ -100,6 +100,18 @@ gadget.init = function(callback){
   callback();
 }
 
+gadget.saveState = function() {
+	gadget.setState({
+		axisInverted : {
+        x : !axisInverted.x,
+        y : axisInverted.y
+		},
+		'selectedXAxis': selectedXAxis,
+		'selectedYAxis': selectedYAxis,
+		'selectedDataSetName' : selectedDataSetName
+	});
+};
+
 gadget.loadState = function(state){
   if (state) {
     axisInverted.x = state.axisInverted && state.axisInverted.x;
