TableView not reading datasets on initalization

--- a/public/gadgets/tableView.html
+++ b/public/gadgets/tableView.html
@@ -45,6 +45,7 @@ var table;
 
 // Creates gadget object
 gadget.init = function(callback){ 
+  gadget.update();
   gadget.onNotification('dataSetChanged', gadget.update);  
   // add colors to the select box (pass the select Name and color array)
   $('#selectDataSetName').change( function(){
